# basic-face-detection

./: README.md  pyproject.toml
app/: __init__.py  config.py  constants.py  handle_error.py  settings.py
app/controller/: basic_face_detection_controller.py
app/libs/aws/: rekognition_service.py
app/libs/aws/tests/: test_aws_client.py  test_s3_service.py
app/libs/face_detection/: face_detection_facade.py  image_service.py  positions_service.py
app/libs/face_detection/tests/: test_face_detection_facade.py  test_image_service.py  test_position_service.py
app/libs/hackattic/tests/: test_hackattic_service.py
app/main/: config.py  controller.py  general.py
app/main/clients/: aws_client.py
app/main/clients/aws/: aws_client.py
app/main/clients/aws/rekognition/: rekognition_client.py
app/main/clients/aws/s3/: s3_client.py
app/main/clients/hackattic/: hackattic_client.py
app/main/controller/: basic_face_detection_controller.py
app/main/controllers/: __init__.py  basic_face_detection_controller.py
app/main/helpers/: position_helper.py  tests_helper.py
app/main/libs/: challenge_solver.py
app/main/libs/aws/: aws_client.py  s3_service.py
app/main/libs/aws/rekognition/: rekognition_service.py
app/main/libs/aws/s3/: s3_service.py
app/main/libs/face_detection/: face_detection_facade.py  image_service.py  positions_service.py
app/main/libs/hackattic/: hackattic_client.py  hackattic_service.py
app/main/services/: hackattic_service.py  rekognition_service.py  s3_service.py
app/main/utils/: handle_error.py
(+9 files in other folders)
