[tool.poetry]
name = "Basic Face Detection"
version = "0.1.0"
description = "Solve the challange Basic Face Detection from Hackattic"
authors = ["guilherme <guilherme.schroederr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
boto3 = "^1.17.27"
Werkzeug = "^1.0.1"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
moto = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
